--- a/index.html
+++ b/index.html
@@ -4,25 +4,15 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="website">
-    <meta name="description" content="This is a website.">
-    <meta name="author" content="John Doe">
+    <meta name="keywords" content="web,terminal">
+    <meta name="description" content="A terminal-like webpage running completely from your browser ">
 
-    <title>Website</title>
+    <title>Web Terminal</title>
 
     <link rel="stylesheet" href="css/fixes.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <header>
-        <h1>Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Website</a></li>
-            </ul>
-        </nav>
-    </header>
-
     <main>
         <article>
             <section>
@@ -30,13 +20,7 @@
             </section>
         </article>
     </main>
-
-    <footer>
-        <p>Website</p>
-        <pre>&copy; 2024. All Rights Reserved.</pre>
-    </footer>
     
-    <script src="js/fixes.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
