--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         </article>
     </main>
     
+    <script src="js/app.js"></script>
+    <script src="js/shell.js"></script>
+    <script src="js/commands.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
