--- a/index.html
+++ b/index.html
@@ -9,18 +9,38 @@
 
     <title>Web Terminal</title>
 
+    <style>
+    body {
+        background: #000;
+        color: #fff;
+
+        font-family: monospace;
+    }
+
+    #term_input {
+        display: none;
+    }
+    </style>
+
     <link rel="stylesheet" href="css/fixes.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <main>
-        <article>
-            <section>
-                <p>Website...</p>
-            </section>
-        </article>
+    <main id="app">
+        <div id="term">
+            <div id="term_output">
+                <pre>Please enable JavaScript</pre>
+            </div>
+            <p id="term_prompt">
+                <span class="green">user@web-term</span>:<span class="blue">~</span>$ 
+                <span id="term_command">ls</span><span class="blinker">█</span></p>
+        </div>
+        <input id="term_input"
+         type="text"
+         autocomplete="none"
+         translate="no">
     </main>
-    
+
     <script src="js/app.js"></script>
     <script src="js/shell.js"></script>
     <script src="js/commands.js"></script>
