--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
         font-family: monospace;
     }
 
-    #term_input {
-        display: none;
+    input {
+        border: none;
+        outline: none;
+        background: none;
+        color: #fff;
+        font-family: monospace;
     }
     </style>
 
