Add `defer` to scripts

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
          translate="no">
     </main>
 
-    <script src="js/app.js"></script>
-    <script src="js/shell.js"></script>
-    <script src="js/commands.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/app.js"  defer></script>
+    <script src="js/shell.js"    defer></script>
+    <script src="js/commands.js" defer></script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
