--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         background: none;
         color: #fff;
         font-family: monospace;
+        font-size: .9rem;
     }
     </style>
 
