--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main id="app">
         <div id="term">
             <div id="term_output">
-                <pre>Welcome to <strong>WEB-TERM</strong></pre>
+                <p>Welcome to <strong>WEB-TERM</strong></p>
             </div>
             <p id="term_prompt">
                 <span id="term_command">
@@ -48,9 +48,9 @@
         </div>
     </main>
 
-    <script src="js/app.js"  defer></script>
-    <script src="js/shell.js"    defer></script>
-    <script src="js/commands.js" defer></script>
-    <script src="js/main.js" defer></script>
+    <script src="js/app.js" defer type="module"></script>
+    <script src="js/shell.js" defer type="module"></script>
+    <script src="js/commands.js" defer type="module"></script>
+    <script src="js/main.js" defer type="module"></script>
 </body>
 </html>
