Added note for JS support

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <main id="app">
         <div id="term">
             <div id="term_output">
+                <noscript><p class="red">No JavaScript?</p></noscript>
                 <p>Welcome to <strong>WEB-TERM</strong></p>
             </div>
             <p id="term_prompt">
