--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                 </span>
                 <input id="term_input"
                  type="text"
-                 autocomplete="none"
-                 translate="no">
+                 autocomplete="none">
             </p>
         </div>
     </main>
