--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </main>
 
     <script src="js/app.js" defer type="module"></script>
+    <script src="js/config.js" defer type="module"></script>
     <script src="js/shell.js" defer type="module"></script>
     <script src="js/commands.js" defer type="module"></script>
     <script src="js/main.js" defer type="module"></script>
