--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     <script src="js/config.js" defer type="module"></script>
     <script src="js/shell.js" defer type="module"></script>
     <script src="js/commands.js" defer type="module"></script>
-    <script src="js/main.js" defer type="module"></script>
+    <script src="js/init.js" defer type="module"></script>
 </body>
 </html>
