update (`yay` edition)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="web,terminal">
     <meta name="description" content="A terminal-like webpage running completely from your browser ">
 
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+
     <title>Web Terminal</title>
 
     <style>
