--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <title>Web Terminal</title>
 
     <style>
+    /* Minimal style before CSS files load */
     body {
         background: #000;
         color: #fff;
-        font-family: monospace;
-        font-size: medium;
+        font-family: 'Roboto Mono', monospace;
+        font-size: 1rem;
     }
     </style>
 
@@ -24,26 +25,27 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <main id="app">
-        <div id="term">
-            <input id="term_input"
+    <main class="app">
+        <section class="term" id="term">
+            <input class="term__input-hidden"
+             id="term-input-hidden"
              autocomplete="off"
              autofocus
              tabindex="0"
              type="text">
             </input>
-            <div id="term_output">
+            <div class="term__output" id="term-output">
                 <noscript><p class="red">No JavaScript?</p></noscript>
                 <p>Welcome to <strong>WEB-TERM</strong></p>
             </div>
-            <div id="term_prompt">
-                <span id="term_command">
+            <div class="term__prompt" id="term-prompt">
+                <span class="term__ps1" id="term-ps1">
                     <span class="green">user@web-term</span>:<span class="blue">~</span>$ 
                 </span>
-                <div id="term_input_display"></div>
-                <span id="term_input_blink"> </span>
+                <div class="term__input-display" id="term-input-display"></div>
+                <span class="term__input-blink" id="term-input-blink"> </span>
             </div>
-        </div>
+        </section>
     </main>
 
     <script src="js/app.js" defer type="module"></script>
