--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </main>
 
     <script src="js/app.js"      defer type="module"></script>
+    <script src="js/appUI.js"      defer type="module"></script>
     <script src="js/config.js"   defer type="module"></script>
     <script src="js/shell.js"    defer type="module"></script>
     <script src="js/commands.js" defer type="module"></script>
