--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
     </main>
 
     <script src="js/app.js"      defer type="module"></script>
-    <script src="js/appUI.js"      defer type="module"></script>
+    <script src="js/appUI.js"    defer type="module"></script>
     <script src="js/config.js"   defer type="module"></script>
+    <script src="js/inputParser.js" defer type="module"></script>
     <script src="js/shell.js"    defer type="module"></script>
     <script src="js/commands.js" defer type="module"></script>
     <script src="js/init.js"     defer type="module"></script>
