optimize shell and inputParser
Signed-off-by: 4yman <170770027+4yman-0@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="web,terminal">
@@ -12,7 +11,10 @@
     <title>Web Terminal</title>
 
     <style>
-    /* Minimal style before CSS files load */
+    /*
+		Minimal style before CSS files load
+		or CSS is partially unsupported (IE)
+	*/
     body {
         background: #000;
         color: #fff;
